// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`integerChipLegend widget tests integer-chip-legend - [x7aa00adbc102c655] Complete the description using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x67c799a0f8d166e0] Select two addition expressions for an integer-chip model 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= −1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x2fba643be6fd9a4f] Describe zero pairs with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xea722bf49a523afb] Count zero pairs with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x272e8236dace3feb] Identify two addition expressions from integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x9d8db87b91e88b8c] Identify representations of 4 with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xce6b6daba4bd70f2] Identify images representing −5 with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x12bc21f992922f93] Select two addition expressions for integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x44e48c43a1428bbb] Identify images that represent −4 with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xbc4c331f3105dde6] Identify images representing 3 with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xcbde5d0699438e02] Select two addition expressions for integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= 1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x9d9353ee8e346f8b] Describe integer chips using zero pairs 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x90fc3f1e0d4d7df5] Complete Sadio's subtraction equation 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= 1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x64d89f0e4439fb60] Complete a subtraction equation using integer chips 1`] = `
"<svg width="71.2" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="71.2" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">-1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x3d4691f41a65dd92] Complete a subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x1e243c8fd876e549] Complete a subtraction equation using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x430e12f4669434a9] Complete a subtraction equation from integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= 1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xc35b5bc8f3c70b52] Complete a subtraction equation using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x70e0a638cd207a9a] Complete a subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x79c70ee1b89ca5b7] Complete a subtraction equation from integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x73ef0a898e35d01b] Complete a subtraction equation from integer chips 1`] = `
"<svg width="71.2" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="71.2" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">-1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xc7e216e925e15870] Complete a subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xc7cbbb65f42f202f] Complete Mark's subtraction equation 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x25a33d41a493d308] Complete a subtraction equation using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x0a960fe3aa62c90b] Complete Tegan's subtraction equation 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= 1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [xb148748f6fa7aa4a] Complete Talia's subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x1c3306d25afbe895] Complete Keala's subtraction equation 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x0dd0a6268dda5727] Complete a subtraction equation using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x5843c3c943826513] Complete a subtraction equation using integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x67ed821473e88c42] Complete a subtraction equation from integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x41f7fa28a8955027] Complete a subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= +1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;

exports[`integerChipLegend widget tests integer-chip-legend - [x8e714f7af63bbbcc] Complete a subtraction equation with integer chips 1`] = `
"<svg width="90.4" height="86" xmlns="http://www.w3.org/2000/svg" font-family="sans-serif">
  <rect x="0" y="0" width="90.4" height="86" rx="6" ry="6" fill="#FFFFFF" stroke="#212121" stroke-width="2" />
  <circle cx="20" cy="20" r="14" fill="#FEF9E7" stroke="#212121" stroke-width="2" /><text x="20" y="20" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">+</text><text x="46" y="20" font-size="16px" fill="#212121" dominant-baseline="central">= 1</text>
  <circle cx="20" cy="60" r="14" fill="#FADBD8" stroke="#212121" stroke-width="2" /><text x="20" y="60" font-size="18px" font-weight="600" fill="#212121" text-anchor="middle" dominant-baseline="central">−</text><text x="46" y="60" font-size="16px" fill="#212121" dominant-baseline="central">= -1</text>
</svg>"
`;
